Fix outline clipping on actions buttons

--- a/src/styles.css
+++ b/src/styles.css
@@ -248,6 +248,7 @@ body > main > ul.tasks > li.task > .actions {
    display: flex;
    justify-content: end;
    margin-top: auto;
+   padding: 2px;
    gap: 12px;
 }
 
